style.css
@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700;800&display=swap');

*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  border: none;
  font-family: "Plus Jakarta Sans", sans-serif;
}

html {
  margin: 0;
  padding: 0;
  font-size: 62.5%;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  scroll-behavior: smooth;
  background-image: linear-gradient(to bottom, #ffffff 10%, #F0F1FF 70%);
  background-attachment: fixed;
}

img {
  display: block;
  max-width: 100%;
}

menu:not(article menu),
ol:not(article ol),
ul:not(article ul) {
  list-style: none;
}

menu,
ol,
ul {
  padding-left: 0;
}

article ol,
article ul {
  list-style-position: inside;
}

a {
  text-underline-position: under;
  text-decoration-thickness: 8;
}
:focus:not(:focus-visible) {
  outline: none;
}

body {
    display: grid;
    grid-template-areas:
        "header"
        "aside"
        "main"
        "footer";
    grid-auto-rows: min-content;
    grid-template-columns: 1;
    height: 100vh;
    margin: 0 0 0 0;
    padding: 0;
    /* background: linear-gradient(180deg, #FFF 10%, #F0F1FF 100%);
    width: 375px; */
}

#pageHeader {
    grid-area: header;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 16px 16px 0 16px;
}

.logo-light {
    width: 89px;
    height: 35px;
    margin-top: 6px;
}

.btn {
    border-radius: 28px;
    width: 140px;
    height: 48px;
    font-size: 1.6rem;
    font-weight: 400;
}

.btn-header {
    background-color: #13183F;
    color: #ffffff;
    margin-right: 3px;
}

#pageAside {
    grid-area: aside;
    margin: 0 0 0 0;
    overflow: hidden;
}

h1 {
    font-size: 4.0rem;
    font-weight: 800;
    color: #13183F;
    margin: 30px 16px 20px 16px;
}

.desc {
    font-size: 1.6rem;
    color: #83869A;
    font-weight: 500;
    line-height: 2.6rem;
    margin-left: 16px;
    margin-right: 16px;
}

.desc-aside {
    margin-right: 10px;
}

.btn-aside {
    background-image: linear-gradient(180deg, #FF6F48 0%, #F02AA6 100%);
    color: #ffffff;
    margin-left: 16px;
    width: 167px;
    height: 56px;
    border-radius: 31/5px;;
}
 
.image-hero-mobile {
    /* transform: scale(1.17); */
    margin: 50px 0 0 0;
} 

.image-hero-tablet {
    display: none;
}

.image-hero-desktop {
    display: none;
}

#pageContent {
    grid-area: main;
    display: flex;
    flex-direction: column;
}

.popular {
    background-image: linear-gradient(180deg, #FF6F48 0%, #F02AA6 100%);
    color: #ffffff;
    border-radius: 10px;
    font-size: 2.4rem;
    font-weight: 800;
    width: 343px;
    height: 120px;
    padding-left: 25px;
    line-height: 3.2rem;
    margin-bottom: 70px;
    margin-left: 16px;
}

.category {
    margin-left: 16px;
    margin-bottom: 40px;
    margin-right: 20px;
    background-color: #ffffff;
    width: 343px;
    height: 259px;
    border-radius: 10px;
    padding: 30px 10px 0 25px;
    position: relative;
}

.animation, .design, .photography, .crypto, .business {
    position: absolute;
    top: -28px;
    left: 28px;
}

h4 {
    font-size: 2.0rem;
    font-weight: 800;
    color: #13183F;
    margin-top: 25px;
    margin-bottom: 5px;
    margin-left: 0px;
}

.category .desc {
    color: #83869A;
    margin-left: 0px;
    margin-right: 0px;
    padding-right: 20px;
    font-size: 1.6rem;
    font-weight: 500;
    line-height: 26px;
    margin-bottom: 30px;
}

.get-started {
    font-size: 1.6rem;
    color: #F74780;
    margin-left: 0px;
}

#pageFooter {
    grid-area: footer;
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: #13183F;
    width: 100%;
    height: 120px;
    padding: 0 16px 0 16px;
}

.btn-footer {
    border-radius: 28px;
    width: 140px;
    height: 48px;
    background: linear-gradient(180deg, #4851FF 0%, #F02AA6 100%);
    color: #FFFFFF;
}

@media only screen and (min-width: 768px) {
    
    body {
        display: grid;
        grid-template-areas:
            "header header"
            "aside aside"
            "main main"
            "footer footer";
        grid-auto-rows: min-content;
        grid-template-columns: repeat(2, 1fr);
        height: 100vh;
        margin: 0;
    }

    #pageHeader {
        margin: 24px 40px 0 39px;
    }

    #pageAside {    
        display: flex;
        flex-direction: row;
        overflow: hidden;
        margin-bottom: 210px;
    }

    .aside-container-right {
        position: absolute;
        right: -280px;
        top: -45px;
    }

    .image-hero-mobile {
        display: none;
    }

    .image-hero-tablet {
        display: block;
        width: 641px;
        height: 640px;
        top: 40px;
        z-index: 1;
        transform: scale(1.15);
    }

    h1 {
        margin: 85px 403px 0 39px;
    }

    .desc-aside {
        margin: 0 331px 25px 39px;
    }

    .btn-aside {
        margin-left: 39px;
    }

 }  

